Changelog:
  Jan 11, 2018:
    1. make 'desc', 'set', 'commit'/'rollback' be executed by backend

    2. add proxy internal errors feedbacks while scanning the SQL and getting routes

    3. optimised the logic that determining the requests are dealed by front-end or backend


  Jan 10, 2018:
    1. add validation checks to tables

    2. add 'myproxy internal errors' to errors list

    3. fix bug of 'duplicated route' when calculating SQL route


  Jan 9, 2018:
    1. add validation checks of datanodes when adding tables from config file

  Jan 8, 2018:
    1. add bind address/listen port configured options

  Jan 5, 2018:
    1. add vertical sharding support

    2. update to v0.01.14

  Dec 1, 2017:
    1. using move instead of copying sql parsing results(tSqlParseItem)

  Nov 28, 2017:
    1. add 'create table' & 'drop table' usage support

    2. make 'myproxy' an open source project on github

    3. update to v0.01.13

  Nov 15, 2017:
    1. add an INITIAL version of 'aggregation processing' module named 'agg_hook'
        that do agregations on result sets

    2. update to v0.01.12 

  Nov 9, 2017:
    1. fix bug that a transaction (for example, doing a query) without valid
        cache  will be abandoned, it is now saved until the cache is available

    2. the 'rx()' method on datanode fds is now moved into module 'myproxy_backend'

    3. fix a memory leak problem of releasing column group buffers in a 
        'to-be-deleted' xa

    4. fix 'thread-unsafe' problem when returning back the cache

    5. the cache is forced to be removed when an 'incorrect' fd is closed


  Nov 7, 2017:
    1. make 'cache pool size', 'datanode group size', 'thread pool size'
        to be configuable 

    2. add support for '__comment' keyword of json files

  Nov 3, 2017:
    1. add a new module named 'dnmgr' to manage usages of datanode and
        datanode groups

    2. add the signal way to reload config from fs by sending signal 'SIGUSR2'

  Oct 30, 2017: